<resources>
    <string name="app_name">TimeSuler</string>
    <string name="home">Home</string>
    <string name="facebook_app_id">583505282305797</string>
    <string name="fb_login_protocol_scheme">fb583505282305797</string>
    <string name="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac dolor velit. In cursus faucibus nulla eleifend eleifend. Curabitur sit amet felis eget lectus ornare commodo quis imperdiet nisl. Sed ac velit nec metus pellentesque elementum.
        Duis dapibus elit sit amet ultricies hendrerit. Donec ac suscipit neque. Donec mi justo, sagittis ac aliquet eget, rutrum ut leo. Aenean ac ullamcorper ex.</string>
    <string name="receiver_select">select</string>
    <string name="email_hint">Please enter your email</string>
    <string name="password">Please enter your password</string>
    <string name="singup_email_hint">Please enter your email</string>
    <string name="signup_password_hint">Please enter your password</string>
    <string name="signup_confirmpassword_hint">Please comfirm your password</string>
    <string name="userProfile_photo">userprofileimage</string>
    <string name="sign_up">Sign up</string>
    <string name="signup_remind">Don\'t have an accout?</string>
    <string name="login">Login</string>
    <string name="signup_textview">Don\'t have an account?</string>

</resources>